language/move-prover/tests/sources/serialize_model.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/serialize_model.move:31:9 ───
    │
 31 │         ensures result_1 == result_2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/serialize_model.move:23:5: lcs_test1_incorrect (entry)
    =     at tests/sources/serialize_model.move:25:23: lcs_test1_incorrect
    =         v1 = <redacted>,
    =         v2 = <redacted>,
    =         s1 = <redacted>
    =     at tests/sources/serialize_model.move:26:32: lcs_test1_incorrect
    =         s2 = <redacted>
    =     at tests/sources/serialize_model.move:27:10: lcs_test1_incorrect
    =         result_0 = <redacted>,
    =         result_1 = <redacted>
    =     at tests/sources/serialize_model.move:23:5: lcs_test1_incorrect (exit)
